--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
           <div class="hero-actions">
             <button class="ghost" id="reloadBtn">Reload Config</button>
             <button class="ghost" id="resetBtn">Reset Config</button>
+            <button class="ghost primary" id="refreshAndTestBtn">Refresh & Test</button>
           </div>
         </div>
         <div class="status" id="statusCard">
@@ -108,8 +109,17 @@
             </label>
           </div>
         </div>
+        <div class="override-section">
+          <h3>Provider Test</h3>
+          <div class="test-row">
+            <input id="testModel" placeholder="Model" value="claude-sonnet-4-5-20250929" style="flex: 1;" />
+            <input id="testPrompt" placeholder="Test prompt (e.g., hi)" value="hi" style="flex: 1;" />
+            <button class="ghost" id="testBtn">Test</button>
+          </div>
+        </div>
         <div class="auth-actions">
           <button class="ghost" id="presetClaudeCLI">Preset: Claude CLI</button>
+          <button class="ghost" id="resetOverride">Reset Override</button>
           <button class="ghost primary" id="applyAuth">Apply</button>
         </div>
       </section>
