--- a/web/index.html
+++ b/web/index.html
@@ -109,6 +109,7 @@
         </div>
         <div class="auth-actions">
           <button class="ghost" id="presetClaudeCLI">Preset: Claude CLI</button>
+          <button class="ghost" id="presetOpenAI">Preset: OpenAI</button>
           <button class="ghost" id="resetOverride">Reset Override</button>
           <button class="ghost primary" id="applyAuth">Apply</button>
         </div>
